maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: not found: value estFaceNord
	while(!estSurBiscuit && estFaceNord){
                                ^